--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sass": "^1.76.0",
         "vite-plugin-singlefile": "^2.0.1"
     },
     "devDependencies": {
