--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,28 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
-    "target": "ESNext",
+    "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "skipLibCheck": true,
 
     /* Bundler mode */
-    "allowJs": true,
-    "checkJs": true,
-    "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "declaration": false,
     "jsx": "react-jsx",
-    "sourceMap": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "jsxImportSource": "react",
-    "resolveJsonModule": true,
-    "outDir": "./tmp",
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["vite/client"],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "baseUrl": "./src",
+    "types": ["vite/client"]
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["./src"],
+
+  "exclude": ["./vite.config.ts"]
 }
