--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,10 +2,16 @@
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
+    "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
+    "experimentalDecorators": true,
+    "verbatimModuleSyntax": true,
+    "strict": true,
+    "noEmit": true,
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "./vite.config.ts"
+  ]
 }
