--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint --fix .",
     "preview": "vite preview",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,vue,css,scss,md,json}' --config ./.prettierrc",
     "format:check": "prettier --debug-check './**/*.{js,jsx,ts,tsx,vue,css,scss,md}' --config ./.prettierrc"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "prettier": "^3.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
     "vite-plugin-singlefile": "^2.0.1"
   },
   "devDependencies": {
+    "@types/node": "^22.15.21",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
